--- a/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
+++ b/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
@@ -4,3 +4,5 @@
 5002 = Parse csv stock failed! inputStr = {0}
 5003 = Parse daily stock csv information failed! inputStr = {0}
 5004 = Parse csv watchStock failed! inputStr = {0}
+5005 = No tick, content = {0}
+5006 = Parse history csv stock failed! inputStr = {0}
