--- a/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
+++ b/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
@@ -4,8 +4,11 @@
 5002 = Parse csv stock failed! inputStr = {0}
 5003 = Parse daily stock csv information failed! inputStr = {0}
 5004 = Parse csv watchStock failed! inputStr = {0}
-5005 = No tick, content = {0}
+5005 = Parse Tick failed! content = {0}
 5006 = Parse history csv stock failed! inputStr = {0}
 5007 = No such date of stock[{0}].
 5008 = The less set is smaller than days[{0}]
 5009 = Parse CSV line failed! msg={0}, line=[{1}]
+5010 = No warrant to buy. code[{0}], amount[{1}]
+5011 = No price can be sell for [{0}]units. Code[{1}]
+5012 = This stock[{0}] doesn't publish warrants 
