--- a/build.properties
+++ b/build.properties
@@ -34,13 +34,13 @@ persistence.xml=${inttestsrc.dir}/xml/persistence.xml
 mockito.lib.dir=${3rdparty.dir}/mockito/1.9.5
 
 # for ant filterset replacing
-host=192.168.1.160
+host=localhost
 mib.port=6500
 jndi.port=6502
 db.name=mysql
-db.url=jdbc:mysql://192.168.1.14:3306/tbpc
-db.userid=tbpcadm
-db.password=tbpcadm123
+db.url=jdbc:mysql://localhost:3306/mmm
+db.userid=kingweng
+db.password=mis11222
 db.driver=com.mysql.jdbc.Driver
 # db.driver=oracle.jdbc.driver.OracleDriver
 db.dialect=org.hibernate.dialect.MySQLDialect
