balance control added

--- a/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
+++ b/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
@@ -11,4 +11,5 @@
 5009 = Parse CSV line failed! msg={0}, line=[{1}]
 5010 = No warrant to buy. code[{0}], amount[{1}]
 5011 = No price can be sell for [{0}]units. Code[{1}]
-5012 = This stock[{0}] doesn't publish warrants 
+5012 = This stock[{0}] doesn't publish warrants.
+5013 = Balance[{0}] is not enough to pay[{1}].
