add theory price computation

--- a/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
+++ b/src/com/oforsky/mmm/properties/AppExceptionMsg.properties
@@ -9,7 +9,9 @@
 5007 = No such date of stock[{0}].
 5008 = The less set is smaller than days[{0}]
 5009 = Parse CSV line failed! msg={0}, line=[{1}]
-5010 = No warrant to buy. code[{0}], amount[{1}]
+5010 = No warrant can buy. code[{0}], amount[{1}]
 5011 = No price can be sell for [{0}]units. Code[{1}]
 5012 = This stock[{0}] doesn't publish warrants.
 5013 = Balance[{0}] is not enough to pay[{1}].
+5014 = Get theory price failed! inputStr = {0}
+5015 = Too late to process bid[{0}].
